--- a/google.css
+++ b/google.css
@@ -31,14 +31,11 @@ nav{
     cursor: pointer;
     border-radius: 80%;
 }
-
 .header-img:hover{
     background-color: #c4bebe8a;
     box-shadow: 0px 0px 0px 4px gainsboro;
     cursor: pointer;
-    
 }
-
 section{
        display:flex;
        flex-wrap:wrap;
@@ -49,7 +46,7 @@ section{
 section h1{
        font-size: 5.5em;
        margin: 10px;
-   font-family: 'Open Sans',serif;
+        font-family:'Gill Sans';
 
    }
 .my-input-container{
@@ -61,13 +58,18 @@ section h1{
        border-radius: 30px;
    }
 .my-input-container:hover{
-       border-style:
+       border-style:in-range;
    }
-.my-input-container img{
+.img-1{
        width:20px;
        height:20px;
        padding: 10px;
    }
+.img-2{
+    width:32px;
+    height:32px;
+    padding:5px 10px;
+}
 .my-input-container > input {
     flex-grow: 1;
     border:none;
@@ -85,6 +87,12 @@ section h1{
     padding:8px 13px;
     cursor: pointer;
     font-size: 14px;
+    border-radius: 5px;
+    background-color: rgb(247, 243, 243);
+    border: gainsboro;
+}
+.button-1 a, .button-2 a{
+text-decoration: none;
 }
 section p a{
     color: blue;
@@ -99,7 +107,7 @@ footer{
 
 footer h1{
     font-size: 16px;
-    padding-left: 50px;
+    padding-left: 200px;
     padding-bottom: 5px;
     color: #808080ec;
     font-family: arial,sans-serif;
@@ -111,11 +119,12 @@ footer nav{
     padding-top: 5px;
 }
 .footer-right{
-padding-right: 30px;
+padding-right: 200px;
 margin-top: 5px;
 }
 .footer-left{
     margin-top: 0;
+    padding-left: 200px;
     }
 @media (max-width: 600px){
     .flex-item-right, .flex-item-left{
