--- a/google.css
+++ b/google.css
@@ -148,25 +148,29 @@ padding-left: 20px;
 align-items: center;
 margin-top: 0;
 }
-@media (max-height:522px){
+@media screen (max-height:33rem){
     body {
         overflow-x:hidden;
+        font-size: 2rem;
     }
     section {
-        margin-bottom: 20px;
+        margin-bottom: 1.5rem;
     }
     footer {
         position:relative;
     }
 }
-@media (max-height:570px) and (max-width:630px){
+@media screen (max-height:37rem) and (max-width:39rem){
     body {
         overflow-x: hidden;
     }
     section {
-        margin-bottom: 13px;
+        margin-bottom: 0.5rem;
+        font-size: 2rem;
     }
     footer {
-        position: relative;
+        position: absolute;
+        width: 100%;
+        font-size: 2rem;
     }
 }
